# pras

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
src/pras/: __init__.py  _version.py  api.py  errors.py
src/pras/analysis/: __init__.py
src/pras/chemistry/: __init__.py  component.py  component_library.py  hydrogen_plans.py  standard_components.py
src/pras/io/: __init__.py  gemmi_reader.py  gemmi_writer.py  normalization.py
src/pras/model/: __init__.py  atom.py  chain.py  enums.py  events.py  ids.py  residue.py  result.py  structure.py
src/pras/packing/: __init__.py  backend.py  faspr_backend.py  faspr_paths.py  plan.py  types.py
src/pras/process/: __init__.py  options.py
src/pras/repair/: __init__.py  geometry.py  heavy_atoms.py  heavy_engine.py  hydrogen_engine.py  hydrogens.py  payloads.py
src/pras/workflow/: __init__.py  process.py
tests/: __init__.py  conftest.py
tests/fixtures/: README.md
tests/support/: representative_cases.py  structure_summary.py
tests/unit/: test_component_template_edge_cases.py  test_domain_model.py  test_faspr_backend.py  test_gemmi_io.py  test_heavy_atom_repair.py  test_hydrogen_edge_cases.py  test_hydrogen_placement.py  test_package_scaffold.py  test_packing_types.py  test_runtime_legacy_dependency.py  test_workflow_process.py
