[build-system]
requires = [
  "hatchling>=1.24",
  "scikit-build-core>=0.12,<0.13",
]
build-backend = "hatchling.build"

[project]
name = "pras"
version = "0.0.0"
description = "Typed Python package for protein repair based on PRAS."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = ["LICENSE", "vendor/faspr/LICENSE"]
dependencies = [
  "gemmi>=0.7.5",
  "numpy>=1.26",
  "typing_extensions>=4.12",
]

[project.optional-dependencies]
analysis = [
  "matplotlib>=3.8",
]
dev = [
  "basedpyright>=1.38.2",
  "hypothesis>=6.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.13.2",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
extend-exclude = [".tmp"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
docstring-code-format = true

[tool.basedpyright]
include = ["src", "tests"]
exclude = [".tmp"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "."

[tool.hatch.build.targets.wheel]
packages = ["src/pras"]

[tool.hatch.build.targets.wheel.hooks.scikit-build]
experimental = true

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"
