[build-system]
requires = [
  "hatchling>=1.24",
  "hatch-vcs>=0.5",
  "scikit-build-core>=0.12",
]
build-backend = "hatchling.build"

[project]
name = "pras"
dynamic = ["version"]
description = "Typed Python package for protein repair based on PRAS."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = ["LICENSE", "vendor/faspr/LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "gemmi>=0.7.5",
  "numpy>=1.26",
  "typing_extensions>=4.12",
]

[project.urls]
Homepage = "https://github.com/isty2e/pras"
Repository = "https://github.com/isty2e/pras"
Issues = "https://github.com/isty2e/pras/issues"

[project.optional-dependencies]
analysis = [
  "matplotlib>=3.8",
]
dev = [
  "basedpyright>=1.38.2",
  "hypothesis>=6.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.13.2",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
extend-exclude = [".tmp"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
docstring-code-format = true

[tool.basedpyright]
include = ["src", "tests"]
exclude = [".tmp"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "."

[tool.hatch.build.targets.wheel]
packages = ["src/pras"]

[tool.hatch.build.targets.wheel.hooks.scikit-build]
experimental = true

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"
tag-pattern = "^(?:v)?(?P<version>.+)$"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"
